<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/lblTodoTitle" />

        <EditText
            android:id="@+id/etTodoTitle"
            android:width="200dp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/lblTodoPriority" />

        <Spinner
            android:id="@+id/spnrTodoPriority"
            android:width="200dp" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/lblTodoDueDate" />

        <TextView
            android:id="@+id/tvTodoDueDate"
            android:width="200dp"
            android:gravity="center"
            android:textSize="20dp" />

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/lblTodoDescription" />

        <EditText
            android:id="@+id/etTodoDescription"
            android:width="200dp"
            android:text="" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/btnCreateTodo"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:gravity="end"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnCancelCreateTodo"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:text="@string/btnCancel" />

    </TableRow>

</TableLayout>
